--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
             <img src="images/slider/slide-1.jpg" alt="slider_01" />
             <!-- Left Slide Text Layer -->
             <div class="caption_slide1 fadeInRight" data-animation="animated fadeInRight">
-                <h1 class="white">Премиум — большие коттеджи</h1>
+                <h1 class="white">«Nirman»</h1>
                 <p class="white mar-bottom-25">
                     Коллекция домов премиум-класса от «Nirman» – масштабные загородные дома, обеспечивающие высочайший уровень комфорта. Современные коттеджи «Премиум» возводятся из высококачественных материалов: инновационного клеёного бруса нового профиля и усиленного каркаса.
 
